--- a/Landing-page/estilos.css
+++ b/Landing-page/estilos.css
@@ -1,25 +1,26 @@
-/**/
-.fotocaru{
-
-    width: 100vw;
-    height: 100vh;
+body{
+    margin: 0;
 }
 
 /**/
 video{
+    width: 100%;
+    height: 100%;
+}
 
-    width: 100vw;
-    height: 100vh;
+.definition{
+    background-color: aqua;
 }
 
 /*Pie de pagina*/
 #pie-pagina {
-    background-color: #696969;
+    background-color: #818181;
     height: 80px;
     padding-top: 20px;
 }
   
 #pie-pagina p {
+    margin-top: 5px;
     color: #ffffff;
     float: left;
 }
@@ -40,7 +41,7 @@ video{
   
 #main-footer ul li a {
     display: block;
-    padding: 10px;
+    padding: 8px;
     text-align: center;
 }
 
@@ -55,12 +56,16 @@ video{
     /*Pie de pagina*/
     #pie-pagina {
         text-align: center;
-        height: 170px;
+        height: 190px;
     }
   
     #pie-pagina p,
     #pie-pagina ul,
     #pie-pagina ul li {
         float: none;
+    }
+
+    #pie-pagina ul li {
+        margin-right: 45px;
     }
 }
