--- a/Landing-page/css/estilos.css
+++ b/Landing-page/css/estilos.css
@@ -12,24 +12,42 @@ body{
     text-align: justify;
 }
 
+.cabecera h1{
+    padding: 25px;
+    width: 450px;
+    color: #D0D0D3;
+    text-align: left;
+}
+
 .cabecera p{
     padding: 25px;
-    color: white;
-    font-family: Verdana;
+    color: #D0D0D3;
+    text-align: left;
 }
 
 .cabecera button{
     display: inline-block;
-    padding: 15px 25px;
+    padding: 10px 50px;
     font-size: 24px;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
     outline: none;
-    color: #EFF8F9;
+    color: #D0D0D3;
     background-color: #A11554;
     border: none;
-    border-radius: 15px;
+    border-radius: 40px;
+}
+
+#bot1{
+    margin-left: 39%;
+    margin-top: 33%;
+    margin-right: 10px;
+}
+
+button:hover{
+    background-color: #413E3F;
+    box-shadow: 0 12px 16px 0 #413E3F,0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 
@@ -94,11 +112,29 @@ body{
         background-repeat: no-repeat;
         text-align: justify;
     }
+
+
+    #bot1{
+        margin-left: 35%;
+        margin-top: 22%;
+    }
 }
 
 /*Cambio de tamaño para de dispositivos móviles*/
 @media only screen and (max-width: 1000px) {
     
+    /*Cabecera*/
+    #bot1{
+        margin-left: 24%;
+        margin-top: 50%;
+    }
+
+    #bot2{
+        margin-left: 25%;
+        margin-top: 5%;
+    }
+
+
     /*Pie de pagina*/
     #pie-pagina {
         text-align: center;
