--- a/Landing-page/css/estilos.css
+++ b/Landing-page/css/estilos.css
@@ -14,15 +14,17 @@ body{
 
 .cabecera h1{
     padding: 25px;
-    width: 450px;
+    width: 560px;
     color: #D0D0D3;
     text-align: left;
+    font-size: 50px;
 }
 
 .cabecera p{
     padding: 25px;
     color: #D0D0D3;
     text-align: left;
+    font-size: 20px;
 }
 
 .cabecera button{
@@ -40,9 +42,21 @@ body{
 }
 
 #bot1{
-    margin-left: 39%;
-    margin-top: 33%;
+    margin-left: 22%;
+    margin-top: 24%;
     margin-right: 10px;
+}
+
+#bot2{
+    margin-left: 24%;
+    margin-top: 5%;
+    margin-right: 10px;
+}
+
+#bots{
+    width: 380px;
+    margin-top: 17%;
+    margin-left: 39%;
 }
 
 button:hover{
@@ -66,6 +80,29 @@ button:hover{
 
 .cabecera input{
     padding: 2px;
+}
+
+
+/**/
+.Info2{
+    background-color: #8b8b8b;
+    padding: 25px;
+    padding-bottom: 15px;
+}
+
+.Info2 p{
+    color: white;
+    font-family: Verdana;
+}
+
+.Info2 h3{
+    color: white;
+    font-family: Verdana;
+}
+
+.Info2 img{
+    width: 30%;
+    height: 30%;
 }
 
 
@@ -105,6 +142,15 @@ button:hover{
 @media only screen and (max-height: 800px) {
     
     /*Cabecera*/
+    .cabecera h1{
+        width: 460px;
+        font-size: 45px;
+    }
+    
+    .cabecera p{
+        font-size: 17px;
+    }
+
     .cabecera{
         margin: 0;
         background-image: url("../fotos/32019.gif");
@@ -113,10 +159,9 @@ button:hover{
         text-align: justify;
     }
 
-
-    #bot1{
-        margin-left: 35%;
-        margin-top: 22%;
+    #bots{
+        margin-top: 10%;
+        margin-left: 38%;
     }
 }
 
@@ -124,16 +169,10 @@ button:hover{
 @media only screen and (max-width: 1000px) {
     
     /*Cabecera*/
-    #bot1{
-        margin-left: 24%;
-        margin-top: 50%;
+    #bots{
+        margin-top: 30%;
+        margin-left: 7%;
     }
-
-    #bot2{
-        margin-left: 25%;
-        margin-top: 5%;
-    }
-
 
     /*Pie de pagina*/
     #pie-pagina {
