--- a/Landing-page/css/estilos.css
+++ b/Landing-page/css/estilos.css
@@ -21,6 +21,15 @@ body{
     border-radius: 40px;
 }
 
+.button a{
+    color: #FFFFFF;
+}
+
+.button a:hover{
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
 .button:hover{
     background-color: #413E3F;
     box-shadow: 0 12px 16px 0 #413E3F,0 17px 50px 0 rgba(0,0,0,0.19);
@@ -38,16 +47,16 @@ body{
 
 .cabecera h1{
     padding: 25px;
-    width: 560px;
+    padding-top: 80px;
     color: #D0D0D3;
-    text-align: left;
+    text-align: center;
     font-size: 50px;
 }
 
-.cabecera p{
+.cabecera h5{
     padding: 25px;
     color: #D0D0D3;
-    text-align: left;
+    text-align: center;
     font-size: 20px;
 }
 
@@ -60,7 +69,7 @@ body{
 
 #bot1{
     margin-left: 22%;
-    margin-top: 24%;
+    margin-top: 40%;
     margin-right: 10px;
 }
 
@@ -89,8 +98,6 @@ body{
     color: #FFFFFF;
     font-family: Verdana;
     text-align: center;
-    margin-left: 170px;
-    width: 1500px;
 }
 
 
@@ -121,33 +128,40 @@ body{
     background-color: #413E3F;
 }
 
-.col-sm-4 h3{
+.col-sm-4 h4{
     text-align: center;
     margin: 40px;
 }
 
-.col-sm-4 p{
-    text-align: center;
-    margin: 40px;
+#titulo1{
+    margin-left: 20%;
+    width: 380px;
+}
+
+#titulo2{
+    margin-left: 20%;
+    width: 350px;
+}
+
+#titulo3{
+    margin-left: 20%;
+    width: 346px;
 }
 
 .col-sm-4 img{
     margin-left: 23%;
-    width: 350px;
+    width: 380px;
     height: 240px;
 }
 
 #fotojuego{
-    padding-top: 30px;
     margin-top: 10px;
-    margin-left: 16%;
+    margin-left: 14%;
     margin-bottom: 10px;
-    width: 400px;
-    height: 220px;
+    width: 390px;
+    height: 190px;
 }
 
-
-/**/
 .compra{
     background-color: #413E3F;
 }
@@ -192,17 +206,11 @@ body{
     text-align: center;
 }
 
+
+/**/
 @media only screen and (max-height: 800px) {
     
     /*Cabecera*/
-    .cabecera h1{
-        width: 460px;
-        font-size: 45px;
-    }
-    
-    .cabecera p{
-        font-size: 17px;
-    }
 
     .cabecera{
         margin: 0;
@@ -213,7 +221,7 @@ body{
     }
 
     #bots{
-        margin-top: 10%;
+        margin-top: 8%;
         margin-left: 38%;
     }
 
@@ -235,6 +243,7 @@ body{
         margin-left: 43%;
     }
 
+    /**/
     .col-sm-4 img{
         margin-left: 15%;
         width: 350px;
@@ -246,14 +255,37 @@ body{
         margin-left: 9%;
         margin-bottom: 10px;
     }
+
+    #titulo1{
+        margin-left: 10%;
+    }
+    
+    #titulo2{
+        margin-left: 10%;
+    }
+    
+    #titulo3{
+        margin-left: 10%;
+    }
 }
+
 
 /*Cambio de tamaño para de dispositivos móviles*/
 @media only screen and (max-width: 1000px) {
     
     /*Cabecera*/
+    .cabecera h1{
+        padding-top: 40px;
+        width: 460px;
+        font-size: 45px;
+    }
+    
+    .cabecera p{
+        font-size: 17px;
+    }
+
     #bots{
-        margin-top: 30%;
+        margin-top: 15%;
         margin-left: 7%;
     }
 
@@ -263,6 +295,7 @@ body{
 
     /**/
     .definition p{
+        text-align: justify;
         margin-left: 0;
         width: 100%;
     }
