--- a/web-medico/style.css
+++ b/web-medico/style.css
@@ -6,27 +6,47 @@ body{
 header{
     width: 100%;
     background-color: #0c3559;
+    opacity: 0.9;
 }
 
 header img{
-    margin-left: 48%;
+    margin-left: 48vw;
+    margin-right: 48vw;
     width: 70px;
     margin-top: 5px;
     margin-bottom: 5px;
 }
 
 section{
-    margin-top: 30px;
-    margin-left: 60px;
-    margin-right: 60px;
+    margin-top: 250px;
+    margin-left: 15vw;
+    margin-right: 15vw;
+    margin-bottom: 30px;
     color: white;
-    border: 10px solid rgba(0, 0, 0, 0.5);
+    border: 10px solid rgba(12, 53, 89, 1);
     border-radius: 10px;  
+    opacity: 0.8;
 }
 
 section p{
-    background-color: gray;
+    background-color: #0c3559;
     margin: 0;
+    padding: 20px;
+    text-align: center;
+}
+
+a{
+    background-color: #0c3559;
+    color: white;
+    font-family: Verdana;
+    text-decoration: none;
+    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    border-radius: 20px;
+    margin-top: 30px;
+    margin-left: 45vw;
+    opacity: 0.9;
 }
 
 .capaflotante{
@@ -51,14 +71,18 @@ section p{
 }
 
 /*Cambio de tamaño para de dispositivos móviles*/
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 800px) {
     
     header img{
-        margin-left: 42%;
+        margin-left: 42vw;
+        margin-right: 42vw;
     }
 
     section{
-        margin: 30px;
+        margin-top: 110px;
     }
     
+    a{
+        margin-left: 29vw;
+    }
 }
