--- a/web-medico/style.css
+++ b/web-medico/style.css
@@ -13,8 +13,8 @@ header img{
     margin-left: 48vw;
     margin-right: 48vw;
     width: 70px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 8px;
+    margin-bottom: 6px;
 }
 
 section{
@@ -33,6 +33,8 @@ section p{
     margin: 0;
     padding: 20px;
     text-align: center;
+    font-family: Verdana;
+    font-size: large;
 }
 
 a{
@@ -50,18 +52,16 @@ a{
 }
 
 .capaflotante{
-    padding: 10px; 
     position: absolute;
     display: none;
-    top: 45px;
-    left: 2%;
+    top: 90px;
 }
 
 .cfmedio{	
-    width: 250px;
+    width: 100vw;
     background: rgb(0, 21, 141);
     color: white;
-    border: 15px solid rgba(0, 0, 0, 0.5);
+    border: 10px solid rgba(12, 53, 89, 1);
     padding: 20px;
     border-radius: 10px;    
 }
@@ -79,7 +79,11 @@ a{
     }
 
     section{
-        margin-top: 110px;
+        margin-top: 70px;
+    }
+
+    section p{
+        font-size: medium;
     }
     
     a{
