--- a/web-medico/style.css
+++ b/web-medico/style.css
@@ -17,19 +17,19 @@ header img{
     margin-bottom: 6px;
 }
 
-section{
-    margin-top: 250px;
+.contenido{
+    margin-top: 60px;
     margin-left: 15vw;
     margin-right: 15vw;
     margin-bottom: 30px;
-    color: white;
-    border: 10px solid rgba(12, 53, 89, 1);
+    padding-bottom: 60px;
+    color: #ffedab;
     border-radius: 10px;  
+    background-color: #0c3559;
     opacity: 0.8;
 }
 
-section p{
-    background-color: #0c3559;
+.contenido p{
     margin: 0;
     padding: 20px;
     text-align: center;
@@ -37,9 +37,21 @@ section p{
     font-size: large;
 }
 
-a{
-    background-color: #0c3559;
-    color: white;
+#ultimo{
+    margin-bottom: 5%;
+}
+
+.contenido h1{
+    margin: 0;
+    padding: 20px;
+    text-align: center;
+    font-family: Verdana;
+}
+
+button{
+    background-color: #ffedab;
+    color: #0c3559;
+    font-size: medium;
     font-family: Verdana;
     text-decoration: none;
     padding: 10px;
@@ -47,27 +59,55 @@ a{
     padding-right: 30px;
     border-radius: 20px;
     margin-top: 30px;
-    margin-left: 45vw;
+    margin-left: 33vw;
     opacity: 0.9;
 }
 
-.capaflotante{
-    position: absolute;
-    display: none;
-    top: 90px;
+a{
+    background-color: #ffedab;
+    color: #0c3559;
+    font-family: Verdana;
+    text-decoration: none;
+    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    border-radius: 20px;
+    margin-top: 30px;
+    margin-left: 29vw;
+    opacity: 0.9;
 }
 
-.cfmedio{	
-    width: 100vw;
-    background: rgb(0, 21, 141);
-    color: white;
-    border: 10px solid rgba(12, 53, 89, 1);
-    padding: 20px;
-    border-radius: 10px;    
+.mensaje{
+    display: none;
+    width: 74vw;
+    height: 80vh;
+    margin-top: 2%;
+    margin-left: 13vw;
+    position: absolute;
+    background-color: #2182bf;
+    border-radius: 10px; 
+    opacity: 0.9; 
+    z-index: 6;
 }
- 
-#padding_box{
-     background-clip: padding-box;
+
+.mensaje h1{
+    margin-top: 60px;
+    text-align: center;
+    color: #ffedab;
+    font-family: Verdana;
+}
+
+.mensaje img{
+    width: 28%;
+    height: 44%;
+    margin-top: 30px;
+    margin-left: 37%;
+    margin-bottom: 60px;
+    opacity: 1; 
+}
+
+.mensaje a{
+    margin-left: 46%;
 }
 
 /*Cambio de tamaño para de dispositivos móviles*/
@@ -78,15 +118,61 @@ a{
         margin-right: 42vw;
     }
 
-    section{
-        margin-top: 70px;
+    .contenido{
+        margin-top: 40px;
+        margin-left: 8vw;
+        margin-right: 8vw;
     }
 
-    section p{
+    .contenido p{
         font-size: medium;
     }
     
     a{
+        margin-left: 25%;
+        margin-bottom: 10px;
+    }
+
+    button{
+        padding: 10px;
+        padding-left: 30px;
+        padding-right: 30px;
+        border-radius: 20px;
+        margin-top: 30px;
         margin-left: 29vw;
+        opacity: 0.9;
+    }
+
+    .mensaje{
+        display: none;
+        width: 90vw;
+        height: 95vh;
+        margin-top: 40%;
+        margin-left: 15px;
+        border-radius: 10px; 
+        opacity: 0.9; 
+        z-index: 6;
+    }
+
+    .mensaje h1{
+        margin-top: 80px;
+    }
+
+    .mensaje a{
+        margin-left: 36%;
+        margin-bottom: 30px;
+    }
+
+    .mensaje img{
+        width: 70%;
+        height: 38%;
+        margin-top: 30px;
+        margin-left: 15%;
+        margin-bottom: 60px;
+        opacity: 1; 
+    }
+
+    #ultimo{
+        margin-bottom: 10%;
     }
 }
