--- a/Formularios/Formulario2/F2-style.css
+++ b/Formularios/Formulario2/F2-style.css
@@ -9,13 +9,13 @@ form{
 }
 
 h2{
-    text-align: left;
+    text-align: center;
     font-family: Verdana;
     margin-left: 20px;
 }
 
-h3{
-    text-align: left;
+h4{
+    text-align: center;
     font-family: Verdana;
     margin-left: 20px;
 }
@@ -24,11 +24,11 @@ input{
 
     font-family: Verdana;
     margin-top: 5px;
-    margin-right: 275px;
+    margin-right: 150px;
     margin-bottom: 15px;
 }
 
 button{
-
-    margin-right: 335px; 
+    
+    margin-right: 270px; 
 }
