--- a/Formularios/Formulario1/F1-style.css
+++ b/Formularios/Formulario1/F1-style.css
@@ -1,8 +1,15 @@
+body{
+    background-color: rgb(175, 175, 175);
+    margin-top: 300px;
+}
+
 form{
 
     border: 2px solid grey;
+    border-radius: 10px;
+    background-color: grey;
     text-align: right;
-    width: 500px;
+    width: 60%;
     padding-top: 5px;
     padding-bottom: 15px;
     margin: 0 auto;
@@ -11,18 +18,52 @@ form{
 h1{
     text-align: center;
     font-family: Verdana;
+    color: white;
+}
+
+.letras{
+    font-family: Verdana;
+    color: white;
 }
 
 input{
 
     font-family: Verdana;
     margin-top: 5px;
-    margin-right: 95px;
+    margin-right: 35%;
     margin-bottom: 15px;
+    padding-left: 5px;
+    border: 1px solid white;
+    border-radius: 10px;
 }
 
 .botones{
 
     margin-top: 20px;
     text-align: center;
+}
+
+button{
+
+    margin: 5px;
+    margin-bottom: 15px;
+    width: 90px;
+    background-color: white;
+    border: 1px solid white;
+    border-radius: 10px;
+    text-align: center;
+}
+
+button:hover {
+
+    background-color: rgb(65, 65, 65);
+    color: white;
+    border: 1px solid rgb(65, 65, 65);
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+
+@media only screen and (max-height: 500px) {
+
+
 }
