--- a/Formularios/Formulario1/F1-style.css
+++ b/Formularios/Formulario1/F1-style.css
@@ -1,6 +1,6 @@
 body{
     background-color: rgb(175, 175, 175);
-    margin-top: 300px;
+    margin-top: 100px;
 }
 
 form{
@@ -8,33 +8,48 @@ form{
     border: 2px solid grey;
     border-radius: 10px;
     background-color: grey;
-    text-align: right;
-    width: 60%;
+    width: 400px;
     padding-top: 5px;
     padding-bottom: 15px;
     margin: 0 auto;
 }
 
-h1{
+.contenido{
+
+    width: 100%;
+    margin-left: 70px;
+}
+
+h2{
     text-align: center;
     font-family: Verdana;
     color: white;
 }
 
+p{
+
+    font-size: 9px;
+    margin: 2px;
+    font-family: Verdana;
+    color: white;
+}
+
 .letras{
+
     font-family: Verdana;
     color: white;
 }
 
 input{
 
+    width: 255px;
+    height: 25px;
     font-family: Verdana;
     margin-top: 5px;
-    margin-right: 35%;
     margin-bottom: 15px;
     padding-left: 5px;
     border: 1px solid white;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .botones{
@@ -43,11 +58,25 @@ input{
     text-align: center;
 }
 
+#aceptar{
+
+    background-color: rgb(0, 102, 255);
+    border: 1px solid rgb(0, 102, 255);
+    color: white;
+}
+
+#aceptar:hover{
+
+    background-color: rgb(65, 65, 65);
+    border: 1px solid rgb(65, 65, 65);
+}
+
 button{
 
     margin: 5px;
     margin-bottom: 15px;
     width: 90px;
+    height: 30px;
     background-color: white;
     border: 1px solid white;
     border-radius: 10px;
@@ -63,7 +92,16 @@ button:hover {
 }
 
 
-@media only screen and (max-height: 500px) {
+@media only screen and (min-height: 450px) {
 
+    form{
 
+        width: 330px;
+    }
+
+    .contenido{
+
+        width: 60%;
+        margin-left: 35px;
+    }
 }
