--- a/Formularios/Formulario2/F2-style.css
+++ b/Formularios/Formulario2/F2-style.css
@@ -1,34 +1,105 @@
+body{
+    background-color: rgb(106, 142, 179);
+    margin-top: 10px;
+}
+
 form{
 
-    border: 2px solid grey;
-    text-align: right;
-    width: 650px;
+    border: 2px solid rgb(77, 128, 179);
+    border-radius: 10px;
+    background-color: rgb(77, 128, 179);
+    width: 400px;
     padding-top: 5px;
     padding-bottom: 15px;
     margin: 0 auto;
 }
 
+
 h2{
-    text-align: center;
+
     font-family: Verdana;
-    margin-left: 20px;
+    color: white;
+    margin-left: 50px;
 }
 
 h4{
-    text-align: center;
+
+    color: rgb(255, 208, 0);
     font-family: Verdana;
-    margin-left: 20px;
+    margin-left: 50px;
+}
+
+p{
+
+    font-size: 9px;
+    margin: 2px;
+    font-family: Verdana;
+    color: white;
+    margin-left: 50px;
+}
+
+.letras{
+
+    font-family: Verdana;
+    color: white;
+    margin-left: 50px;
 }
 
 input{
 
+    width: 230px;
+    height: 25px;
     font-family: Verdana;
     margin-top: 5px;
-    margin-right: 150px;
     margin-bottom: 15px;
+    margin-left: 50px;
+    border: 1px solid white;
+    border-radius: 5px;
+}
+
+.botones{
+
+    margin-top: 20px;
+    text-align: center;
+}
+
+#create:hover{
+
+    background-color: rgb(65, 65, 65);
+    border: 1px solid rgb(65, 65, 65);
 }
 
 button{
-    
-    margin-right: 270px; 
+
+    margin: 5px;
+    margin-bottom: 15px;
+    width: 120px;
+    height: 30px;
+    background-color: rgb(255, 208, 0);
+    border: 1px solid rgb(255, 208, 0);
+    border-radius: 10px;
+    text-align: center;
+}
+
+button:hover {
+
+    background-color: rgb(65, 65, 65);
+    color: white;
+    border: 1px solid rgb(65, 65, 65);
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+
+@media only screen and (min-height: 450px) {
+
+    form{
+
+        width: 330px;
+    }
+
+    .contenido{
+
+        width: 60%;
+        margin-left: 35px;
+    }
 }
